# stm32wb55-ble

./: .gitignore  README.md
firmware/cube/: .mxproject  stm32wb-ble-cube.ioc
firmware/cube/Core/Inc/: app_conf.h  main.h  sai.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
firmware/cube/Core/Src/: gpio.c  i2c.c  main.c  quadspi.c  rtc.c  sai.c  spi.c  stm32wbxx_it.c  tim.c  usart.c  usb.c
firmware/cube/STM32_WPAN/App/: app_ble.c  hrs_app.c
firmware/exam/EX-01-LED/src/hw/: hw_def.h
firmware/exam/EX-01-LED/src/hw/driver/: led.c
firmware/exam/EX-02-UART/src/ap/: ap.c
firmware/exam/EX-02-UART/src/bsp/ldscript/: STM32WB55RG_FLASH.ld
firmware/exam/EX-02-UART/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-03-LOG/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-03-LOG/src/hw/driver/: uart.c
firmware/exam/EX-04-CLI/src/ap/: ap.c
firmware/exam/EX-04-CLI/src/bsp/: bsp.c
firmware/exam/EX-04-CLI/src/bsp/device/: stm32wbxx_hal_msp.c
firmware/exam/EX-04-CLI/src/hw/: hw.c  hw_def.h
firmware/exam/EX-05-FLASH/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-06-I2C/src/bsp/device/: stm32wbxx_it.c
firmware/exam/EX-06-I2C/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-07-EEPROM/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-07-EEPROM/src/hw/driver/: eeprom.c
firmware/exam/EX-08-SWTIMER/src/ap/: ap.c
firmware/exam/EX-08-SWTIMER/src/bsp/: bsp.h
firmware/exam/EX-08-SWTIMER/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-08-SWTIMER/src/hw/driver/: i2c.c
firmware/exam/EX-09-BUTTON/src/bsp/device/: stm32wbxx_hal_conf.h
firmware/exam/EX-09-BUTTON/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-09-BUTTON/src/hw/driver/: swtimer.c
firmware/exam/EX-10-QSPI_FLASH/: CMakeLists.txt
firmware/exam/EX-10-QSPI_FLASH/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-10-QSPI_FLASH/src/hw/driver/: button.c  qspi.c
firmware/exam/EX-11-LITTLEFS/: CMakeLists.txt
firmware/exam/EX-11-LITTLEFS/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-12-NVS/src/hw/: hw.c
firmware/exam/EX-12-NVS/src/hw/driver/: qspi.c
firmware/exam/EX-13-USB_CDC/: CMakeLists.txt
firmware/exam/EX-13-USB_CDC/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-13-USB_CDC/src/hw/driver/: led.c  uart.c
firmware/exam/EX-13-USB_CDC/src/hw/driver/usb/usb_cdc/: usbd_desc.c
firmware/exam/EX-14-BLE_HeartRate/src/ap/: ap.c
firmware/exam/EX-14-BLE_HeartRate/src/bsp/: bsp.c
firmware/exam/EX-14-BLE_HeartRate/src/hw/: hw_def.h
firmware/exam/EX-14-BLE_HeartRate/src/hw/driver/: nvs.c
firmware/exam/EX-14-BLE_HeartRate/src/hw/driver/usb/: usb.c  usbd_conf.c
firmware/exam/EX-14-BLE_HeartRate/src/hw/driver/wpan/: wpan.h
firmware/exam/EX-14-BLE_HeartRate/src/hw/driver/wpan/app/src/: hrs_app.c
firmware/exam/EX-14-BLE_HeartRate/src/lib/ST/STM32_USB_Device_Library/: Release_Notes.html
firmware/stm32wb55-ble-fw/: CMakeLists.txt
firmware/stm32wb55-ble-fw/src/ap/: ap.c
firmware/stm32wb55-ble-fw/src/bsp/device/: stm32wbxx_hal_conf.h  stm32wbxx_hal_msp.c  syscalls.c
firmware/stm32wb55-ble-fw/src/bsp/ldscript/: STM32WB55RG_EXTEND.ld
firmware/stm32wb55-ble-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32wb55-ble-fw/src/hw/driver/: flash.c  fs.c
firmware/stm32wb55-ble-fw/src/hw/driver/usb/: usbd_conf.c
firmware/stm32wb55-ble-fw/src/hw/driver/wpan/: wpan.c  wpan.h
firmware/stm32wb55-ble-fw/src/hw/driver/wpan/app/src/: app_ble.c
firmware/stm32wb55-ble-fw/src/hw/driver/wpan/core/src/: rtc.c
